--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,26 @@
+certifi==2021.10.8
+charset-normalizer==2.0.11
+click==8.0.3
+colorama==0.4.4
+docopt==0.6.2
 Flask==2.0.2
+Flask-SQLAlchemy==2.5.1
+greenlet==1.1.2
+idna==3.3
+itsdangerous==2.0.1
+Jinja2==3.0.3
+MarkupSafe==2.0.1
+pipreqs==0.4.11
+# Postgres
+psycopg2==2.9.3
+# MySQL
+PyMySQL==1.0.2
+requests==2.27.1
+SQLAlchemy==1.4.31
+urllib3==1.26.8
+Werkzeug==2.0.3
+yarg==0.1.9
+# MSSQL
+pyodbc
+# Oracle
+cx_Oracle
